tests/negative/import_private_symbol.far
import fixtures.exp_b { hidden }

fun main() -> i64 {
  return hidden()
}
